# rust-devai

./: .gitignore  .luarc.json  CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml
_init/_setup/: aip-env  aip-env.sh
_init/_template/: pack.toml  template.gitignore
_init/_template/agegent-ask/: main.aip
_init/_template/agent-hello-world/: main.aip
_init/base/: config-default.toml  config-user.toml  config.toml
_init/base/doc/: README.md  lua-api.md  lua.md
_init/workspace/: config.toml
data/models-pricing/: pricing-all.json
dev/agents/docaify/: main.aip
dev/future/: dev-chat-hidden-sub-agents.md
dev/spec/: lua-api-spec-csv.md
dev/spec-code/: spec-code-exec-for-llm.md  spec-code-exec.md  spec-code-model.md  spec-code-run-with-install.md  spec-code-runtime.md  spec-code-tui-for-llm.md  spec-code-tui.md
dev/spec/lua-api/: lua-api-csv-spec.md
dev/specs/: spec-cmd-unpack.md  spec-code-aip-flow.md  spec-code-exec.md  spec-code-runtime.md  spec-code-tui.md
src/: derive_aliases.rs  error.rs  main.rs
src/_test_support/: asserts.rs  base.rs  hub_capture.rs  loaders.rs  lua_test_support.rs  mod.rs  runners.rs  seeders.rs  test_files.rs
src/_tests/: tests_agent_parse.rs  tests_installer_impl.rs  tests_packer_impl.rs  tests_run_agent_llm.rs  tests_run_agent_script.rs  tests_support_md_block_iter.rs  tests_support_text_tag_block_iter.rs  tests_unpacker_impl.rs
src/agent/: agent_common.rs  agent_doc.rs  agent_locator.rs  agent_options.rs  agent_ref.rs  prompt_part.rs
src/ai/: runner.rs
src/cli/: args.rs
src/dir_context/: aipack_base_dir.rs  aipack_paths.rs  aipack_wks_dir.rs  base.rs  dir_context_impl.rs  mod.rs  pack_dir.rs  path_consts.rs  path_resolvers.rs
src/event/: cancel.rs  common.rs  mod.rs  one_shot.rs  unbound.rs
src/exec/: assets.rs  event_action.rs  event_status.rs  exec_agent_run.rs  exec_cmd_check_keys.rs  exec_cmd_create_gitignore.rs  exec_cmd_install.rs  exec_cmd_list.rs  exec_cmd_new.rs  exec_cmd_pack.rs  exec_cmd_run.rs  exec_cmd_unpack.rs  exec_command.rs  exec_list.rs  exec_run.rs  exec_sub_agent.rs  executor.rs  mod.rs  support.rs
src/exec/cli/: args.rs
src/exec/exec_cmd_xelf/: mod.rs  support.rs  xelf_setup.rs  xelf_update.rs  xelf_update_nix.rs
src/exec/init/: assets.rs  init_assets.rs  init_base.rs  init_wks.rs  mod.rs
src/exec/packer/: installer_impl.rs  mod.rs  pack_toml.rs  packer_impl.rs  support.rs  support_tests.rs  unpacker_impl.rs
src/exec/params/: mod.rs  run_agent_params.rs
src/hub/: base.rs  helpers.rs  hub_event.rs  hub_impl.rs  mod.rs
src/init/: assets.rs  init_base.rs  init_wks.rs  mod.rs
src/model/: derive_aliases.rs  error.rs  mod.rs  model_manager.rs  runtime_ctx.rs
src/model/base/: crud_fns.rs  db_bmc.rs  mod.rs
src/model/db/: db_impl.rs  mod.rs  rt_db_setup.rs
src/model/entities/: err.rs  inout.rs  log.rs  mod.rs  pin.rs  prompt.rs  run.rs  task.rs  ucontent.rs  work.rs  work_data.rs
src/model/types/: content.rs  data_event.rs  end_state.rs  epoch_us.rs  id.rs  mod.rs  model_event.rs  run_step.rs  running_state.rs  stage.rs  unix_time_us.rs
src/pack/: pack_identity.rs  pack_ref.rs
src/packer/: installer_impl.rs  mod.rs  pack_toml.rs  packer_impl.rs  support.rs
src/pricing/: data.rs  mod.rs  pricer.rs
src/run/: ai_response.rs  genai_client.rs  literals.rs  mod.rs  proc_after_all.rs  proc_ai.rs  proc_before_all.rs  proc_data.rs  proc_output.rs  run_agent.rs  run_agent_task.rs  run_command.rs  run_input.rs  run_options.rs
src/run/pricing/: data.rs  mod.rs  pricer.rs  pricing_types.rs
src/run/queue/: mod.rs  run_queue.rs
src/run/run_executor/: mod.rs  run_queue_event.rs  run_queue_executor.rs
src/run/run_types/: attachments.rs  mod.rs  run_agent_response.rs  run_redo_ctx.rs  run_sub_agent_params.rs  run_top_agent_params.rs
src/run/runtime/: base.rs
src/runtime/: base.rs  mod.rs  rt_log.rs  rt_model.rs  rt_step.rs  runtime_impl.rs  runtime_inner.rs  runtime_model.rs  runtime_path_resolver.rs  runtime_rec.rs  runtime_rec_lua.rs
src/runtime/queue/: mod.rs  run_event.rs  run_queue.rs
src/runtime/support/: file_write_manager.rs  mod.rs
src/script/: aipack_custom.rs  error_lua_support.rs  file_write_manager.rs  helpers.rs  lua_engine.rs  lua_json.rs  lua_na.rs  lua_null.rs  lua_value_ext.rs  lua_w_intos.rs  mod.rs  support.rs
src/script/aip_modules/: aip_agent.rs  aip_cmd.rs  aip_code.rs  aip_csv.rs  aip_editor.rs  aip_flow.rs  aip_git.rs  aip_hash.rs  aip_hbs.rs  aip_html.rs  aip_json.rs  aip_json_tests.rs  aip_lua.rs  aip_md.rs  aip_path.rs  aip_pdf.rs  aip_pin.rs  aip_run.rs  aip_run_task.rs  aip_rust.rs  aip_semver.rs  aip_shape.rs  aip_tag.rs  aip_task.rs  aip_text.rs  mod.rs  (+7 more)
src/store/: derive_aliases.rs  error.rs  mod.rs  model_manager.rs
src/support/: consts.rs  cow_lines.rs  cred.rs  csvs.rs  csvs_tests.rs  editor.rs  event.rs  files.rs  hbs.rs  html.rs  html_rcdom.rs  jsons.rs  mod.rs  os.rs  pdf.rs  proc.rs  str_ext.rs  time.rs  tomls.rs  vec_ext.rs  yamls.rs  zip.rs
src/term/: common.rs  control.rs  init_term.rs  mod.rs  prompt_input.rs  prompt_select.rs
src/tui/: app_event_handler.rs  app_state.rs  hub_event_handler.rs  in_reader.rs  mod.rs  prompter.rs  support.rs  term_reader.rs  tui_app.rs  tui_elem.rs  tui_impl.rs  tui_loop.rs
src/tui_v1/: hub_event_handler.rs  in_reader.rs  mod.rs  prompter.rs  tui_app.rs  tui_elem.rs
src/types/: changes_info.rs  csv_content.rs  csv_options.rs  dest_options.rs  extrude.rs  file_info.rs  file_meta.rs  file_over_options.rs  file_record.rs  file_ref.rs  file_stats.rs  md_block.rs  md_heading.rs  md_ref.rs  md_section.rs  mod.rs  pack_identity.rs  pack_ref.rs  run_agent_options.rs  save_options.rs  sort_by_globs_options.rs  tag_block.rs  tag_elem.rs  web_options.rs  web_response.rs  yaml_docs.rs  zip_options.rs
tests-data/.aipack-base/: config.toml
tests-data/agent-doc/: agent-all-sections.aip  agent-demo.aip  agent-legacy-config.aip
tests-data/agents/: agent-demo.md
tests-data/config/: config-current-with-aliases.toml
tests-data/test-nested-freeze/: agent-main.aip  agent-sub.aip  agent-top.aip
(+362 files in other folders)
