[package]
name = "aipack"
version = "0.7.7-WIP"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Command Agent runner to accelerate production coding with genai."
categories = ["command-line-utilities"]
keywords = ["generative-ai","openai","genai","ai-coding"]
homepage = "https://aipack.ai"
repository = "https://github.com/aipack-ai/aipack"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
# deprecated = { level = "allow", priority = -1 } # For exploratory dev.

[[bin]]
name = "aip"
path = "src/main.rs"

[dependencies]
# -- Async
tokio = { version = "1" }
tokio-stream = "0.1.17"
flume = "0.11.1"
# -- AI
genai = { version = "0.2.3"}
# -- Json & Data Files
serde = { version = "1", features = ["derive"] }
serde_json = "1"
value-ext = "0.1.2"
toml = "0.8"
# -- Parsers & Formatters
logos = "0.15"
aho-corasick = "1.1.3"
lazy-regex = "3.4.1"
num-format = "0.4.4"
humantime = "2.1.0"
# -- HTML Helpers
html-escape = "0.2"
html-helpers = "0.0.5"
# -- Template & Scripting
mlua = { version = "0.10.1", features = ["lua54", "vendored", "send", "serialize"] }
handlebars = "6"
# -- Cli
clap =  {version = "4.5.17", features = ["cargo", "derive"]}
crossterm = { version = "0.29", features = ["event-stream"] }
# -- Files
simple-fs = { version = "0.6"}
camino = "1" # trying this lib out
home = "0.5.11"
zip = "2"
walkdir = "2.4"
size = "0.5.0"
trash = "5.2.2"
# -- Web
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
# -- Others
derive_more = {version = "2.0.0", features = ["from","display","debug"] }
strum = { version = "0.27", features = ["derive"] }
keyring = {version = "3", features = ["apple-native"]}
strsim = "0.11"
paste = "1.0"
time = { version = "0.3.37", features = ["formatting"]}
time-tz = {version = "2.0.0", features = ["system"]}
semver = "1.0.22"


[build-dependencies]
simple-fs = { version = "0.6"}
zip = "2"
walkdir = "2.4"
