[package]
name = "aipack"
version = "0.7.16-WIP"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Command Agent runner to accelerate production coding with genai."
categories = ["command-line-utilities"]
keywords = ["generative-ai","openai","genai","ai-coding"]
homepage = "https://aipack.ai"
repository = "https://github.com/aipack-ai/aipack"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
# deprecated = { level = "allow", priority = -1 } # For exploratory dev.

[[bin]]
name = "aip"
path = "src/main.rs"

[dependencies]
# -- Async
tokio = { version = "1" }
tokio-stream = "0.1.17"
flume = "0.11.1"
futures-timer = "3.0.3"
futures = "0.3.31"
# -- AI
genai = { version = "0.4.0-alpha.7" }
# -- Json & Data Files
serde = { version = "1", features = ["derive"] }
serde_json = "1"
value-ext = "0.1.2"
toml = "0.9"
serde_yaml_ng = "0.10"
# -- Tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2"
# -- DB
rusqlite = { version = "0.37.0", features = ["bundled", "uuid", "serde_json", "serialize"] }
modql = { version = "0.5.0-alpha.4", features = ["with-rusqlite"]}
# -- Parsers & Formatters
logos = "0.15"
aho-corasick = "1.1.3"
lazy-regex = "3.4.1"
num-format = "0.4.4"
humantime = "2.1.0"
textwrap = "0.16"
# -- HTML 
html-escape = "0.2"
html-helpers = { version = "0.0.9" }
htmd = "0.2.1"
url = "2.5.4"
# -- Web
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
# -- Template & Scripting
mlua = { version = "0.11.1", features = ["lua54", "vendored", "send", "serialize"] }
handlebars = "6"
# -- Cli
clap =  {version = "4.5.17", features = ["cargo", "derive"]}
ratatui = {version = "0.29.0", features = ["scrolling-regions"] }
# Note: For now, ratatui 0.29.0 requires crossterm 0.28 (and not 0.29) 
#       per author comment in jc live
crossterm = { version = "0.28", features = ["event-stream"] }
# -- Files
simple-fs = { version = "0.7.0", features = ["with-json"]}
zip = "4"
walkdir = "2.4"
size = "0.5.0"
trash = "5.2.2"
# -- Hash
blake3 = "1.8.2"
sha2 = "0.10.9"
# -- BaseX
base64 = "0.22.1"
bs58 = "0.5.1"
hex = "0.4" # Added for hex encoding
# -- Others
derive_more = {version = "2.0.0", features = ["from","display","debug", "into", "deref"] }
strum = { version = "0.27", features = ["derive"] }
keyring = {version = "3", features = ["apple-native"]}
strsim = "0.11"
paste = "1.0"
time = { version = "0.3.37", features = ["formatting", "local-offset"]}
time-tz = {version = "2.0.0", features = ["system"]}
semver = "1.0.22"
uuid = {version = "1.16", features = ["v4", "v7", "fast-rng"]}
uuid-extra = "0.0.2"
sysinfo = "0.36.0"
extend = "1.2.0"



[build-dependencies]
simple-fs = { version = "0.7.0", features = ["with-json"]}
zip = "4"
walkdir = "2.4"
