[package]
name = "aipack"
version = "0.8.12-WIP"
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "Command Agent runner to accelerate production coding with genai."
categories = ["command-line-utilities"]
keywords = ["generative-ai","openai","genai","ai-coding"]
homepage = "https://aipack.ai"
repository = "https://github.com/aipack-ai/aipack"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
# deprecated = { level = "allow", priority = -1 } # For exploratory dev.

[[bin]]
name = "aip"
path = "src/main.rs"

[dependencies]
# -- Async
tokio = { version = "1", features = ["process"]}
tokio-util = "0.7.16"
tokio-stream = "0.1.17"
flume = "0.12"
futures-timer = "3.0.3"
futures = "0.3.31"
# -- AI
genai = { version = "0.5.0-alpha.9" }
# -- Json & Data Files
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.28", features = ["serde"]}
value-ext = "0.1.2"
toml = "0.9"
serde_yaml_ng = "0.10"
csv = "1"
lopdf = "0.38"
# -- Tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2"
# -- DB
rusqlite = { version = "0.38.0", features = ["bundled", "uuid", "serde_json", "serialize"] }
modql = { version = "0.5.0-alpha.7", features = ["with-rusqlite"]}
# -- String pasers, matchers, ormatters
logos = "0.16"
aho-corasick = "1.1.3"
lazy-regex = "3.4.1"
num-format = "0.4.4"
humantime = "2.3.0"
textwrap = "0.16"
markex = { version = "0.1.0" }
udiffx = { version = "0.1.0-alpha.8" }
# -- HTML & XML
html-escape = "0.2"
html-helpers = { version = "0.1.0" }
htmd = "0.5"
url = "2.5.7"
quick-xml = "0.38"
# -- Web
reqwest = {version = "0.13", default-features = false, features = ["json", "stream"]}
# -- Template & Scripting
mlua = { version = "0.11.4", features = ["lua54", "vendored", "send", "serialize"] }
handlebars = "6"
# -- Cli
clap =  {version = "4.5.50", features = ["cargo", "derive"]}
ratatui = {version = "0.30.0", features = ["scrolling-regions"] }
crossterm = { version = "0.29", features = ["event-stream"] }
# -- Files
simple-fs = { version = "0.9.2", features = ["with-json"]}
zip = "7"
walkdir = "2.5"
size = "0.5.0"
trash = "5.2.5"
# -- Hash
blake3 = "1.8.2"
sha2 = "0.10.9"
# -- BaseX
base64 = "0.22.1"
bs58 = "0.5.1"
hex = "0.4" # Added for hex encoding
# -- OS
arboard = "3.6.1"
sysinfo = "0.37.2"
# -- Macro uttils
paste = "1.0"
macro_rules_attribute = "0.2.2"
extend = "1.2.0"
# -- Others
derive_more = {version = "2.0.1", features = ["from","display","debug", "into", "deref"] }
strum = { version = "0.27", features = ["derive"] }
keyring = {version = "3", features = ["apple-native"]}
strsim = "0.11"
time = { version = "0.3.44", features = ["formatting", "local-offset"]}
time-tz = {version = "2.0.0", features = ["system"]}
semver = "1.0.27"
uuid = {version = "1.18", features = ["v4", "v7", "fast-rng"]}
uuid-extra = "0.0.2"
bitflags = "2.8.0"

[build-dependencies]
simple-fs = { version = "0.9.2", features = ["with-json"]}
zip = "7"
walkdir = "2.5"
